--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <link href="./src/style.css" rel="stylesheet">
-    <title>ivy-git</title>
+    <title>Ivy Git</title>
 </head>
 <body>
 <div id="app"></div>
